--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -15,13 +15,13 @@ nav{
     margin:0 10px;
     color:black;
 }
-.btn button{
+/* .btn button{
     padding: 8px 20px;
     margin :0 10px;
     font-size:20px;
-    background-color:orange;
-    border:none;
+    /* background-color:orange; */
+    /* border:none;
     border-radius:5px;
     color:white;
     border-radius: 10px;
-}
+} */ 
