--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -7,6 +7,7 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 0 35px;
    
 }
 .navlinks a{
@@ -25,3 +26,14 @@ nav{
     color:white;
     border-radius: 10px;
 } */ 
+.toggleBar{
+    display: none;
+}
+@media (max-width:700px){
+    .navlinks,.authbtns{
+        display: none;
+    }
+    .toggleBar{
+        display: block;
+    }
+}
