--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -7,7 +7,8 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 0 35px;
+    padding: 0 35px;
+    position: relative;
    
 }
 .navlinks a{
@@ -26,7 +27,7 @@ nav{
     color:white;
     border-radius: 10px;
 } */ 
-.toggleBar{
+.toggleBar,.toggleNavbar{
     display: none;
 }
 @media (max-width:700px){
@@ -35,5 +36,21 @@ nav{
     }
     .toggleBar{
         display: block;
+    }
+    .toggleNavbar{
+        position: absolute ;
+        background-color: orange;
+        width: 100%;
+        top: 100%;
+        right: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 50px 0;
+        gap: 20px;
+
+
+
     }
 }
